--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Belajar API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "node app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "nodemon": "^1.12.1",
-    "sequelize": "^4.22.6"
+    "sequelize": "^4.22.6",
+    "sequelize-cli": "^3.0.0"
   }
 }
